--- a/package.json
+++ b/package.json
@@ -3,20 +3,30 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.html",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jahidmunshi99/Express-Pro-1.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/jahidmunshi99/Express-Pro-1/issues"
+  },
+  "homepage": "https://github.com/jahidmunshi99/Express-Pro-1#readme",
   "description": "",
   "dependencies": {
-    "body-parse": "^0.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "nodemon": "^3.1.9",
+    "node": "^20.19.0",
     "uuidv4": "^6.2.13"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
